--- a/app/src/compenents/Layout/PostBody/PostBody.module.scss
+++ b/app/src/compenents/Layout/PostBody/PostBody.module.scss
@@ -7,8 +7,7 @@
   *:first-child {
     margin-top: 0;
   }
-
-  pre,
+  
   p, h1, h2, h3, h4, h5, h6 {
     max-width: var(--spacing-max-para-width);
   }
