--- a/app/src/compenents/Markdown/MDBlock.scss
+++ b/app/src/compenents/Markdown/MDBlock.scss
@@ -12,22 +12,19 @@ p {
   }
 }
 
-pre {
-  margin: 2em 0;
-  font-family: var(--ff-mono);
+.katex-display {
+  display: block;
+  max-width: var(--spacing-max-para-width);
+  overflow-x: auto;
+  overflow-y: hidden !important;
+  white-space: nowrap !important;
 
-  line-height: 1.5;
-  border-radius: 0.4em;
-
-  // background-color: var(--color-bg-pale);
-  // background-color: var(--color-bg-reverse-main);
-  border: 1px solid var(--color-border-main);
-
-  white-space: pre-wrap;
-
-  code {
-    font-size: calc(14 / 18 * 1em);
-    padding: 2em !important;
-    background-color: rgba(white, 0) !important;
+  .katex {
+    display: inline-block; /* 保持内容水平排列 */
+    width: 100%;
+    height: 100%;
+    // margin-left: 1.5em;
+    padding: 2px 0;
+    
   }
 }
